# rust-accelerator-no-sql-store

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: common.proto  manager-api.proto  worker-api.proto
src/: cli.rs  common.rs  conversions.rs  main.rs
src/manager/: domain.rs  grpc.rs  mod.rs  service.rs
src/manager/grpc/: conversions.rs  input.rs  manager_connection.rs  output.rs  session.rs  test_support.rs  tests.rs
src/manager/grpc/input/: tests.rs
src/manager/grpc/output/: tests.rs
src/manager/service/: cluster_state.rs  connection.rs  election.rs  heartbeat.rs  partitions.rs  state.rs  test_support.rs  tests.rs
src/manager/service/cluster_state/: tests.rs
src/manager/service/connection/: tests.rs
src/manager/service/election/: tests.rs
src/manager/service/heartbeat/: tests.rs
src/manager/service/partitions/: tests.rs
src/worker/: domain.rs  grpc.rs  mod.rs  runtime_store.rs  service.rs
src/worker/grpc/: input.rs  manager_connection.rs  output.rs  session.rs  worker_connection.rs
src/worker/service/: cluster_state.rs  connection.rs  election.rs  heartbeat.rs  state.rs
